Fix right overflow on mobile

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body {
 .right-panel-content {
     width: 100%;
     margin: auto;
+    min-width: fit-content;
 }
 
 .right-panel-content>div,
